# hasktile-hackathon

./: .gitignore  hasktile.cabal  python_vectoradd.py  simple_validate.py  test_cutile_dump.py  test_strided.hs  validate_mlir.py  vector_add.mlir
examples/: Main.hs  StridedExample.hs  TestMul.hs  TestStrided.hs
python/: dump_cutile_bytecode.py  single_block_add.py  test_cutile_debug.py  test_cutile_dump.py  test_cutile_mlir.py
python/bytecode/: single_block_add.ln17.cutile  single_block_add.ln29.cutile
src/TileIR/: CUDADriver.hs  CodeGen.hs  DSL.hs  GEMM.hs  Runtime.hs  Types.hs
test/: TestBlockIdx.hs  TestFoldMultiTile.hs  TestFoldSimple.hs  TestGEMM.hs  TestMapZip.hs  TestMapZipSimple.hs  TestReductions.hs  TestSoftmax.hs  TestSoftmaxClean.hs  TestSuite.hs
